--- a/COMP2120-Notes.tex
+++ b/COMP2120-Notes.tex
@@ -1,3 +1,6 @@
+% !TEX program = latexmk
+% !TEX options = --shell-escape -synctex=1 -interaction=nonstopmode -file-line-error -pdf -outdir="%OUTDIR%" "%DOC%"
+
 \documentclass[10pt]{article}
 
 \input{preambles}
