notes: example problem for cache

--- a/preambles.tex
+++ b/preambles.tex
@@ -5,7 +5,7 @@
 \usepackage{indentfirst}
 \usepackage{amsmath,amsthm,amssymb,amsfonts}
 \usepackage{float}
-\usepackage[italicdiff]{physics}
+% \usepackage[italicdiff]{physics}
 \usepackage[T1]{fontenc}
 %\usepackage{pifont} %For unusual symbols
 %\usepackage{mathdots} %For unusual combinations of dots
@@ -38,7 +38,7 @@
 \newcommand{\Lam}{\Lambda}
 %\newcommand{\abs}[1]{\ensuremath{\left\lvert#1\right\rvert}} % This clashes with the physics package
 %\newcommand{\norm}[1]{\ensuremath{\left\lVert#1\right\rVert}} % This clashes with the physics package
-\renewcommand{\ip}[1]{\ensuremath{\left\langle#1\right\rangle}}
+% \renewcommand{\ip}[1]{\ensuremath{\left\langle#1\right\rangle}}
 \newcommand{\floor}[1]{\ensuremath{\left\lfloor#1\right\rfloor}}
 \newcommand{\ceil}[1]{\ensuremath{\left\lceil#1\right\rceil}}
 \newcommand{\A}{\mathbb{A}}
