--- a/preambles.tex
+++ b/preambles.tex
@@ -1,35 +1,31 @@
-% \usepackage[english]{babel}
 \usepackage{graphicx}
 \usepackage{framed}
 \usepackage[normalem]{ulem}
 \usepackage{indentfirst}
 \usepackage{amsmath,amsthm,amssymb,amsfonts}
 \usepackage{float}
-% \usepackage[italicdiff]{physics}
 \usepackage[T1]{fontenc}
-%\usepackage{pifont} %For unusual symbols
-%\usepackage{mathdots} %For unusual combinations of dots
 \usepackage{wrapfig}
 \usepackage{lmodern,mathrsfs}
 \usepackage[inline,shortlabels]{enumitem}
-\setlist{topsep=2pt,itemsep=2pt,parsep=0pt,partopsep=0pt}
 \usepackage[dvipsnames,table,xcdraw]{xcolor}
 \usepackage[utf8]{inputenc}
 \usepackage[a4paper, top=0.5in,bottom=0.2in, left=0.5in, right=0.5in, footskip=0.3in, includefoot]{geometry}
 \usepackage[most]{tcolorbox}
-% \usepackage{tikz,tikz-3dplot,tikz-cd,tkz-tab,tkz-euclide,pgf,pgfplots}
-% \pgfplotsset{compat=1.5,width=0.4\textwidth}
+\usepackage{circuitikz}
 \usepackage{multicol,multirow}
-\usepackage[bottom,multiple]{footmisc} %ensures footnotes are at the bottom of the page, and separates footnotes by a comma if they are adjacent
-% \usepackage[backend=bibtex,style=numeric]{biblatex}
-% \renewcommand*{\finalnamedelim}{\addcomma\addspace} %forces authors' names to be separated by comma, instead of "and"
-% \addbibresource{bibliography}
+\usepackage[bottom,multiple]{footmisc}
 \usepackage[hidelinks]{hyperref}
 \usepackage[nameinlink]{cleveref} %nameinlink ensures that the entire element is clickable in the pdf, not just the number
 \usepackage{cancel}
 \usepackage{minted}
 \usepackage{etoolbox}
 \usepackage[calc,en-GB]{datetime2}
+\usepackage{caption,subcaption}
+
+\setlist{topsep=2pt,itemsep=2pt,parsep=0pt,partopsep=0pt}
+
+\ctikzset{logic ports=ieee}
 
 \newcommand{\remind}[1]{\textcolor{red}{\textbf{#1}}} %To remind me of unfinished work to fix later
 \newcommand{\hide}[1]{} %To hide large blocks of code without using % symbols
