--- a/preambles.tex
+++ b/preambles.tex
@@ -1,27 +1,4 @@
-\usepackage{graphicx}
-\usepackage{framed}
-\usepackage[normalem]{ulem}
-\usepackage{indentfirst}
-\usepackage{amsmath,amsthm,amssymb,amsfonts}
-\usepackage{float}
-\usepackage[T1]{fontenc}
-\usepackage{wrapfig}
-\usepackage{lmodern,mathrsfs}
-\usepackage[inline,shortlabels]{enumitem}
-\usepackage[dvipsnames,table,xcdraw]{xcolor}
-\usepackage[utf8]{inputenc}
-\usepackage[a4paper, top=0.5in,bottom=0.2in, left=0.5in, right=0.5in, footskip=0.3in, includefoot]{geometry}
-\usepackage[most]{tcolorbox}
-\usepackage{circuitikz}
-\usepackage{multicol,multirow}
-\usepackage[bottom,multiple]{footmisc}
-\usepackage[hidelinks]{hyperref}
-\usepackage[nameinlink]{cleveref} %nameinlink ensures that the entire element is clickable in the pdf, not just the number
-\usepackage{cancel}
-\usepackage{minted}
-\usepackage{etoolbox}
-\usepackage[calc,en-GB]{datetime2}
-\usepackage{caption,subcaption}
+\input{packages}
 
 \setlist{topsep=2pt,itemsep=2pt,parsep=0pt,partopsep=0pt}
 
