feat, gh: add LaTeX cheatsheet compilation

--- a/cheatsheet/preambles.tex
+++ b/cheatsheet/preambles.tex
@@ -1,3 +1,5 @@
+\usetikzlibrary{shapes,positioning,arrows,fit,calc,graphs,graphs.standard}
+
 \definecolor{myblue}{cmyk}{1,.72,0,.38}
 
 \def\firstcircle{(0,0) circle (1.5cm)}
