--- a/cheatsheet/COMP2120-Cheatsheet.tex
+++ b/cheatsheet/COMP2120-Cheatsheet.tex
@@ -1,22 +1,5 @@
 \documentclass[10pt,landscape,a4paper]{article}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-%\usepackage[LY1,T1]{fontenc}
-%\usepackage{frutigernext}
-% \usepackage[lf,minionint]{MinionPro}
-\usepackage{tikz}
-\usetikzlibrary{shapes,positioning,arrows,fit,calc,graphs,graphs.standard}
-\usepackage[nosf]{kpfonts}
-\usepackage[t1]{sourcesanspro}
-\usepackage{multicol}
-\usepackage{wrapfig}
-\usepackage[top=1mm,bottom=1mm,left=1mm,right=1mm]{geometry}
-\usepackage[framemethod=tikz]{mdframed}
-\usepackage{microtype}
-\usepackage{pdfpages}
-\usepackage{circuitikz}
-\usepackage{caption,subcaption,float}
-\usepackage[inline,shortlabels]{enumitem}
+\input{packages}
 
 \let\bar\overline
 
