refactor: moved notes files into notes dir

--- a/cheatsheet/COMP2120-Cheatsheet.tex
+++ b/cheatsheet/COMP2120-Cheatsheet.tex
@@ -12,5 +12,6 @@
 \input{evolution-of-computers}
 \input{digital-logic}
 \input{number-representation}
+\input{instruction-execution-cycle}
 \end{multicols*}
 \end{document}
