gh: use matrix strategy

--- a/notes/COMP2120-Notes.tex
+++ b/notes/COMP2120-Notes.tex
@@ -1,5 +1,5 @@
 % !TEX program = latexmk
-% !TEX options = --shell-escape -synctex=1 -interaction=nonstopmode -file-line-error -pdf -outdir="%OUTDIR%" "%DOC%"
+% !TEX options = --shell-escape -synctex=1 -interaction=nonstopmode -file-line-error -pdf -cd -outdir=. ./COMP2120-Notes.tex
 
 \documentclass[10pt]{article}
 
