--- a/cheatsheet/COMP2120-Cheatsheet.tex
+++ b/cheatsheet/COMP2120-Cheatsheet.tex
@@ -13,5 +13,6 @@
 \input{digital-logic}
 \input{number-representation}
 \input{instruction-execution-cycle}
+\input{memory.tex}
 \end{multicols*}
 \end{document}
