notes: hdd headers

--- a/cheatsheet/memory.tex
+++ b/cheatsheet/memory.tex
@@ -92,3 +92,7 @@ $i \, (\text{Set \#}) = j \, (\text{Main mem block}) \, \%\, v$.\\
 \subsubsection*{Unified/Split Cache}
 \emph{Unified}: Instructions and data share the same cache. Auto balanced. Memory contention problem on pipeline and parallel executions, causes bottoleneck.\\
 \emph{Split}: Instructions and data have fixed-size separate caches. Better performance. Main trend.
+
+\subsection*{External Memory}
+
+\subsubsection*{Hard Disk Drive (HDD)}
