notes(cs): adjust colour for printing

--- a/cheatsheet/number-representation.tex
+++ b/cheatsheet/number-representation.tex
@@ -45,7 +45,7 @@ $\pm\text{Significand}\times2^{\pm\text{(Biased) Exponent}}$\\
 \subsubsection*{Special Values (used only when specified)}
 \emph{0}: exp = 0, sig = 0.\\
 \emph{Subnormalized}: exp = 0, sig $\neq$ 0.\\
-\emph{$\infty$}: exp = all 1, sig = 0.\\
+\emph{$\boldsymbol{\infty}$}: exp = all 1, sig = 0.\\
 \emph{NaN}: exp = all 1, sig $\neq$ 0.
 
 \subsubsection*{Properties}
