--- a/notes/main.tex
+++ b/notes/main.tex
@@ -1,14 +1,14 @@
 % This is the file where all sub-fils are included with \input{} command.
 % Actual contents shall be written in their respective files.
 
-\input{chaps/evolution-of-computers/index}
+\include{chaps/evolution-of-computers/index}
 
-\input{chaps/digital-logic/index}
+\include{chaps/digital-logic/index}
 
-\input{chaps/number-representation/index}
+\include{chaps/number-representation/index}
 
-\input{chaps/instruction-execution-cycle/index}
+\include{chaps/instruction-execution-cycle/index}
 
-\input{chaps/memory/index}
+\include{chaps/memory/index}
 
-\input{chaps/input-output/index}
+\include{chaps/input-output/index}
