notes(cs): hdd section

--- a/cheatsheet/COMP2120-Cheatsheet.tex
+++ b/cheatsheet/COMP2120-Cheatsheet.tex
@@ -9,6 +9,7 @@
 %\footnotesize
 \small
 \begin{multicols*}{5}
+\raggedright
 \input{evolution-of-computers}
 \input{digital-logic}
 \input{number-representation}
