notes(cs): add input-output section

--- a/cheatsheet/COMP2120-Cheatsheet.tex
+++ b/cheatsheet/COMP2120-Cheatsheet.tex
@@ -15,5 +15,6 @@
 \input{number-representation}
 \input{instruction-execution-cycle}
 \input{memory.tex}
+\input{input-output.tex}
 \end{multicols*}
 \end{document}
