--- a/cheatsheet/preambles.tex
+++ b/cheatsheet/preambles.tex
@@ -164,3 +164,5 @@ leftmargin=0mm,rightmargin=0mm,skipbelow=0mm,skipabove=0mm,
 \newcommand{\bnot}[1]{\overline{#1}}
 \newcommand{\bxor}{\oplus}
 \newcommand{\band}{\cdot}
+
+\newcommand{\eg}{{\footnotesize\itshape e.g. }}
