--- a/cheatsheet/COMP2120-Cheatsheet.tex
+++ b/cheatsheet/COMP2120-Cheatsheet.tex
@@ -16,5 +16,6 @@
 \input{instruction-execution-cycle}
 \input{memory.tex}
 \input{input-output.tex}
+\input{instruction-sets.tex}
 \end{multicols*}
 \end{document}
