notes, refactor: update disclaimer wording and remove datetime2 package; revise title for clarity

--- a/notes/disclaimer.tex
+++ b/notes/disclaimer.tex
@@ -4,8 +4,7 @@ These notes were adapted from the lecture slides and the textbook. The author of
 does not claim any originality. The author is not responsible for any errors or typos in these notes.
 Opinions expressed in these notes are not necessarily those of the author(s) of the original materials.
 
-This PDF file is compiled at \DTMnow\,automatically and published at 
+This PDF file was automatically compiled and published at 
 \textcolor{blue}{\url{https://github.com/ShingZhanho/COMP2120-Notes}}.
-This document is distributed \textbf{free of charge}. You are a victim of fraud if you paid for this document.
 
 \end{remark}
