--- a/notes/preambles.tex
+++ b/notes/preambles.tex
@@ -215,7 +215,7 @@
 \setlength{\parskip}{4pt}
 \setlength{\columnseprule}{0pt}
 
-\title{COMP2120 - 2024/25 \\ \Large Revision Notes}
+\title{\bfseries COMP2120 Computer Organisation \\ \Large Revision Notes}
 
 \author{Jacob Shing}
 \date{24 Jan 2024}
