gh, fix: update cache condition checks

--- a/cheatsheet/instruction-sets.tex
+++ b/cheatsheet/instruction-sets.tex
@@ -1,1 +1,8 @@
 \section{Instruction Sets}
+
+\emph{Arithmetic Operations}: treat operands as numbers; consider signs;
+(\eg arithmetic shift = multiplication/division by 2, sign bit preserved).\\
+\emph{Logical Operations}: treat operands as bit patterns; discard bits shifted out;
+replenish new bits with 0.\\
+\emph{Rotate Operations}: put bits shifted out back into the other end of the number;
+are logical operations.\\
