notes: added OS support section

--- a/notes/COMP2120-Notes.tex
+++ b/notes/COMP2120-Notes.tex
@@ -19,6 +19,22 @@
 }{}
 
 \tableofcontents
+\listoffigures
+
+\vfill
+
+\begin{remark}
+    For taking the taking the final examination, an A4-sized double-sided cheatsheet
+    is also provided on the same GitHub repository.
+\end{remark}
+
+{
+\footnotesize
+This document is updated automatically on its GitHub distribution page.
+To ensure you have the latest information, please check the page regularly.
+The author bears no responsibility for any errors or omissions in this document.
+Use with discretion.
+}
 
 \input{main}
 
