--- a/notes/disclaimer.tex
+++ b/notes/disclaimer.tex
@@ -7,4 +7,8 @@ Opinions expressed in these notes are not necessarily those of the author(s) of 
 This PDF file was automatically compiled and published at 
 \textcolor{blue}{\url{https://github.com/ShingZhanho/COMP2120-Notes}}.
 
+The order/arrangement of the contents in this document reflects neither the order of
+teaching of the course nor the order of the textbook. The author of these notes has
+rearranged the contents for his own convenience.
+
 \end{remark}
