notes(cs), fix: clarify assembler directive description

--- a/cheatsheet/instruction-sets.tex
+++ b/cheatsheet/instruction-sets.tex
@@ -60,6 +60,6 @@ No floating point by hardware, must be emulated.
 \emph{Assembler Directives}\\
 \texttt{.data} \hfill data segment\\
 \texttt{.text} \hfill program segment\\
-\texttt{.global NAME} \hfill (\texttt{extern})\\
+\texttt{.global NAME} \hfill introduce to other files\\
 \texttt{.reserve EXPR} \hfill reserve space with 0\\
 \texttt{.word VAL1[, ...]} \hfill write to memory\\
