fix, notes: typo in final examination remark

--- a/notes/COMP2120-Notes.tex
+++ b/notes/COMP2120-Notes.tex
@@ -24,7 +24,7 @@
 \vfill
 
 \begin{remark}
-    For taking the taking the final examination, an A4-sized double-sided cheatsheet
+    For taking the final examination, an A4-sized double-sided cheatsheet
     is also provided on the same GitHub repository.
 \end{remark}
 
